Fixed weird strips overlapping, better tip

--- a/app/styles/tooltip.scss
+++ b/app/styles/tooltip.scss
@@ -36,8 +36,14 @@ $tooltip-min-width: 200px;
 }
 
 .x-axis-tip-bar{
-  fill:none;
-  stroke: none;
+  .tick {
+    font-size: 12px;
+    font-weight: bold;
+  }
+  path {
+    fill:none;
+    stroke: none;
+  }
 }
 
 .bar-text-label {
